# src/api/resources/user/user.service.js
@@ -1,7 +1,25 @@
 ﻿import Joi from 'joi';
 
 export default {
-  validateCreateSchema(body) {
+  validateSignUpSchema(body) {
+    const schema = Joi.object().keys({
+      email: Joi.string()
+        .email()
+        .required(),
+      password: Joi.string().required(),
+      name: Joi.string().required(),
+    });
+    const { error, value } = Joi.validate(body, schema);
+    if (error && error.details) {
+      return {
+        error,
+      };
+    }
+    return {
+      value,
+    };
+  },
+  validateLoginSchema(body) {
     const schema = Joi.object().keys({
       email: Joi.string()
         .email()
@@ -17,5 +35,21 @@ export default {
     return {
       value,
     };
+  },
+  getUser(user) {
+    const resp = {};
+    if (user.local.email) {
+      resp.name = user.local.name;
+      resp.email = user.local.email;
+    }
+    if (user.google.email) {
+      resp.name = user.google.displayName;
+      resp.email = user.google.email;
+    }
+    if (user.twitter.username) {
+      resp.name = user.twitter.displayName;
+      resp.email = user.twitter.username;
+    }
+    return resp;
   },
 };
